<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textDescription"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textSecurityKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="Security Key:"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/description_jsch"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/imageLogo" />

    <EditText
        android:id="@+id/textDataUser"
        style="?android:textAppearanceMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"
        android:hint="@string/ssh_sample_username_hint"
        android:lines="1"
        android:text="@string/ssh_sample_username"
        app:layout_constraintEnd_toStartOf="@+id/textDataAt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSecurityKey" />

    <TextView
        android:id="@+id/textDataAt"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ssh_sample_at"
        app:layout_constraintBottom_toBottomOf="@+id/textDataUser"
        app:layout_constraintEnd_toStartOf="@+id/textDataHost"
        app:layout_constraintStart_toEndOf="@+id/textDataUser"
        app:layout_constraintTop_toTopOf="@+id/textDataUser" />

    <EditText
        android:id="@+id/textDataHost"
        style="?android:textAppearanceMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/ssh_sample_host_hint"
        android:text="@string/ssh_sample_host"
        app:layout_constraintBottom_toBottomOf="@+id/textDataAt"
        app:layout_constraintEnd_toStartOf="@+id/buttonConnect"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toEndOf="@+id/textDataAt"
        app:layout_constraintTop_toTopOf="@+id/textDataAt" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:text="@string/ssh_sample_connect_button"
        app:layout_constraintBottom_toBottomOf="@+id/textDataHost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textDataHost" />

    <ScrollView
        android:id="@+id/scrollLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxUseCertificate">

        <TextView
            android:id="@+id/textLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="monospace"
            tools:text="Log View" />
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBoxUseCertificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Use certificate on card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDataHost" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerCardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:entries="@array/cardTypes"
        app:layout_constraintBottom_toBottomOf="@+id/textSecurityKey"
        app:layout_constraintStart_toEndOf="@+id/textSecurityKey"
        app:layout_constraintTop_toTopOf="@+id/textSecurityKey" />

</androidx.constraintlayout.widget.ConstraintLayout>
